--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,19 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.kotest</groupId>
+            <artifactId>kotest-runner-junit5-jvm</artifactId>
+            <version>4.6.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.kotest</groupId>
+            <artifactId>kotest-assertions-core-jvm</artifactId>
+            <version>4.6.3</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <repositories>
